--- a/src/Components/Content/Rooms/RoomPage/RoomPage.css
+++ b/src/Components/Content/Rooms/RoomPage/RoomPage.css
@@ -95,7 +95,6 @@
     outline: none;
     -webkit-transition: .3s;
     transition: .3s;
-    border-radius: 15px;
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 
@@ -257,6 +256,7 @@
     background-color: rgba(0, 0, 0, 0);
     visibility: hidden;
     transition: .5s;
+    z-index: 3;
 }
 .services_selector.active {
     visibility: visible;
