--- a/src/Components/Modals/BookingModal/BookingModal.css
+++ b/src/Components/Modals/BookingModal/BookingModal.css
@@ -5,14 +5,13 @@
     height: 100vh;
     width: 100vw;
     z-index: 3;
-    background-color: rgba(0, 0, 0, 0.5);
-    opacity: 0;
+    background-color: rgba(0, 0, 0, 0);
     visibility: hidden;
     transition: .5s;
 }
 
 .booking_bg.active {
-    opacity: 1;
+    background-color: rgba(0, 0, 0, 0.6);
     visibility: visible;
 }
 
@@ -22,7 +21,7 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%) scale(.5);
     background-color: #fafafa;
     z-index: 2;
     box-shadow: 0px 6px 30px -10px rgba(0,0,0,0.83);
@@ -30,7 +29,15 @@
     overflow: hidden;
     display: grid;
     grid-template-rows: 60px 1fr;
-    /* display: none; */
+    opacity: 0;
+    transition: .5s;
+}
+
+.booking_modal.active {
+    opacity: 1;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1);
 }
 
 .booking_modal .modal_header {
@@ -56,10 +63,6 @@
     top: 50%;
     transform: translateY(-50%);
     cursor: pointer;
-}
-
-.booking_modal .modal_close:hover {
-    animation: animateBtnClose .5s forwards;
 }
 
 .modal_close > div {
@@ -131,7 +134,7 @@
     width: 100%;
     top: 0;
     left: 0;
-    padding: 10px;
+    padding: 0px 10px 10px 10px;
     transform: translateX(0%);
     transition: .5s;
 }
@@ -150,11 +153,12 @@
 .booking_modal .booking_calendar {
     width: 100%;
     height: 50%;
-    background-color: orange;
+    background-color: #fff;
     display: flex;
     justify-content: center;
     align-items: center;
     margin-bottom: 30px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
 .booking_modal .booking_guests {
@@ -169,10 +173,11 @@
 .booking_guests select {
     height: 100%;
     border: none;
-    background-color: orange;
+    background-color: #fff;
     outline: none;
-    color: #fff;
+    color: #000;
     font-size: 18px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
 .booking_modal .modal_btn {
@@ -180,8 +185,8 @@
     padding: 8px 35px;
     font-size: 18px;
     border: none;
-    background-color: orange;
-    color: #fff;
+    background-color: #fff;
+    color: #000;
     outline: none;
     margin: 0 auto;
     cursor: pointer;
@@ -218,10 +223,9 @@
 
 .services_options .service_item {
     width: 150px;
-    height: 30px;
+    height: 40px;
     background-color: #fff;
     margin: 0 auto 10px;
-    border-radius: 5px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     position: relative;
     display: flex;
@@ -233,48 +237,34 @@
 }
 
 .services_options .service_select {
-    width: 25px;
-    height: 25px;
+    width: 30px;
+    height: 30px;
     border-radius: 50%;
-    background-color: orange;
     position: absolute;
     top: 50%;
-    right: 15px;
+    right: 10px;
     transform: translateY(-50%);
     cursor: pointer;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 14px;
 }
 
-.service_select > div {
-    width: 15px;
-    height: 3px;
-    background-color: #fff;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-.service_select > div:last-child {
-    transform: translate(-50%, -50%) rotate(90deg);
+.service_select i {
+    text-align: center;
+    display: block;
+    margin-left: -1px;
+    line-height: 30px;
+    margin-top: 2px;
 }
 
 .booking_services .booking_price {
     text-align: center;
     font-size: 24px;
     font-weight: bold;
-    margin-bottom: 48px;
-}
-
-
-
-/*************** ANIMATIONS ***************/
-
-@keyframes animateBtnClose {
-    from {
-        transform: translateY(-50%) rotate(0deg);
-    }
-    to {
-        transform: translateY(-50%) rotate(360deg);
-    }
+    margin-bottom: 20px;
 }
 
 /*************** MEDIA QUERIES ***************/
@@ -306,11 +296,27 @@
     .booking_modal .booking_calendar {
         width: 300px;
         height: 280px;
-        margin: 0 auto 30px;
+        margin: 0 auto 15px;
+    }
+
+    .services_options .service_item {
+        width: 280px;
+        height: 50px;
+        background-color: #fff;
+    }
+
+    .services_options .service_select {
+        width: 40px;
+        height: 40px;
+        font-size: 16px;
+    }
+
+    .services_options {
+        margin-bottom: 20px;
     }
 
     .booking_services .booking_price {
-        margin-bottom: 40px;
+        margin-bottom: 20px;
     }
 }
 
