--- a/src/Components/Content/Rooms/Search/Search.css
+++ b/src/Components/Content/Rooms/Search/Search.css
@@ -25,14 +25,15 @@
     background-color: #fff;
     height: 80px;
     position: fixed;
-    top: 50px;
+    top: 0px;
     left: 0;
+    transform: translateY(-100%);
     width: 100%;
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
     transition: .5s;
 }
 .search .search_header.active {
-    top: 0;
+    transform: translateY(0%);
 }
 
 .search_header .wrapper {
