--- a/src/Components/Admin/Admin.module.css
+++ b/src/Components/Admin/Admin.module.css
@@ -5,12 +5,6 @@
     background-color: rgb(234, 234, 234);
 }
 
-.content {
-    max-width: 1200px;
-    margin: 0 auto;
-    border: 1px solid black;
-}
-
 /********* HEADER *********/
 
 .admin_header {
@@ -134,6 +128,7 @@
     overflow-y: scroll;
     border: 4px solid red;
     transition: .5s;
+    padding: 15px;
 }
 .admin_body.active .content {
     width: 100vw;
