--- a/src/Components/Admin/Admin.module.css
+++ b/src/Components/Admin/Admin.module.css
@@ -120,13 +120,67 @@
     transform: translateX(-100%);
 }
 
+.nav_header {
+    /* border: 1px solid black; */
+    min-height: 50px;
+    padding-top: 10px;
+    margin-bottom: 20px;
+}
+
+.nav_header .profile_img {
+    width: 100px;
+    height: 100px;
+    margin: 0 auto 10px;
+    border-radius: 50%;
+    border: 8px solid #fff;
+    box-shadow: 0 0 3px rgba(0,0,0,0.12), 0 0 2px rgba(0,0,0,0.24);
+}
+
+.nav_header .user_name {
+    text-align: center;
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+.nav_header .user_email {
+    font-size: 14px;
+    text-align: center;
+}
+
+.nav .nav_holder {
+    /* border: 1px solid black; */
+    list-style: none;
+    /* padding: 10px; */
+    padding-left: 10px;
+}
+
+.nav_holder li {
+    display: grid;
+    grid-template-columns: 30px 1fr;
+    align-items: center;
+    /* border: 1px solid black; */
+    height: 40px;
+    font-size: 18px;
+}
+.nav_holder li.active {
+    border-right: 4px solid orange;
+}
+
+.nav_holder li a {
+    text-decoration: none;
+    color: #000;
+    
+    /* line-height: 40px; */
+}
+
 /********* CONTENT *********/
 
 .admin_body .content {
     height: calc(100vh - 60px);
     width: calc(100vw - 170px);
     overflow-y: scroll;
-    border: 4px solid red;
+    /* border: 4px solid red; */
     transition: .5s;
     padding: 15px;
 }
