--- a/src/Components/Content/Rooms/Search/Search.css
+++ b/src/Components/Content/Rooms/Search/Search.css
@@ -31,6 +31,7 @@
     width: 100%;
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
     transition: .5s;
+    z-index: 1;
 }
 .search .search_header.active {
     transform: translateY(0%);
@@ -91,6 +92,8 @@
     margin-bottom: 30px;
     display: grid;
     grid-template-columns: 200px 1fr;
+    opacity: 0;
+    animation: animateReault .5s forwards;
 }
 .search_results .result_item:hover {
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
@@ -100,16 +103,7 @@
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    background-image: url(/Assets/RoomPage/room_1/2.jpg);
 }
-
-/* .search_results .result_item > div {
-    border: 1px solid black;
-}
-
-.result_item-body > div {
-    border: 1px solid black;
-} */
 
 .result_item-body {
     display: grid;
@@ -147,6 +141,17 @@
     align-items: center;
     font-size: 24px;
     font-weight: bold;
+}
+
+/********** ANIMATIONS **********/
+
+@keyframes animateReault {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
 
 /********** MEDIA_QUERIES **********/
