--- a/src/Components/Admin/Admin.module.css
+++ b/src/Components/Admin/Admin.module.css
@@ -157,6 +157,11 @@
     padding-left: 10px;
 }
 
+.nav_holder a {
+    text-decoration: none;
+    color: #000;
+}
+
 .nav_holder li {
     display: grid;
     grid-template-columns: 30px 1fr;
