--- a/src/Components/Admin/UserInfo/UserInfo.module.css
+++ b/src/Components/Admin/UserInfo/UserInfo.module.css
@@ -91,6 +91,7 @@
 .submit_btn:focus {
     background-color: #ff7948;
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    outline: none;
 }
 
 /******** MEDIA QUERIES ********/
