--- a/src/Components/Modals/BookingModal/BookingModal.css
+++ b/src/Components/Modals/BookingModal/BookingModal.css
@@ -157,6 +157,7 @@
     margin-bottom: 30px;
     border: none;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    font-size: 12px;
 }
 
 .booking_calendar .react-calendar__navigation {
