--- a/src/Components/Admin/History/History.module.css
+++ b/src/Components/Admin/History/History.module.css
@@ -1,5 +1,3 @@
-/********** GENERAL **********/
-
 .history {
     /* border: 1px solid black; */
     min-height: 200px;
@@ -39,4 +37,10 @@
 
 .status_indicator.canceled {
     background-color: red;
+}
+
+/********** DETAILS **********/
+
+.booking_details {
+    text-align: center;
 }
