--- a/src/Components/Content/Home/Home.css
+++ b/src/Components/Content/Home/Home.css
@@ -1,88 +1,7 @@
 .home {
     min-height: 150vh;
     background-color: #fafafa;
-}
-
-/************** WIDGET **************/
-
-.booking_widget {
-    width: 80%;
-    height: 200px;
-    margin: 0 auto 100px;
-    border-radius: 35px;
-    position: relative;
-    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);   
-    border: 5px solid #fff; 
-}
-
-.widget_bg {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-image: url(/Assets/Home/Widget/widget_bg1.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    border-radius: 35px;
-    overflow: hidden;
-    filter: opacity(.5);
-}
-
-.widget_inputs {
-    width: 100%;
-    height: 100%;
-    position: relative;
-    /* background-color: #fff; */
-    border-radius: 35px;
-    overflow: hidden;
-    padding: 30px;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-column-gap: 45px;
-}
-
-.widget_inputs .input_item {
-    background-color: #fff;
-    height: 50px;
-    border-radius: 5px;
-    outline: none;
-    border: 5px solid #fff;
-    font-size: 18px;
-    appearance: none;
-    padding-left: 60px;
-    background-repeat: no-repeat;
-    background-position: 10px center;
-    background-size: contain;
-}
-.widget_inputs .input_item:nth-child(1) {
-    background-image: url(/Assets/Home/Widget/rooms.svg);    
-}
-.widget_inputs .input_item:nth-child(2) {
-    background-image: url(/Assets/Home/Widget/resume.svg);  
-    background-size: 33px;  
-}
-.widget_inputs .input_item:nth-child(3),
-.widget_inputs .input_item:nth-child(4) {
-    background-image: url(/Assets/Home/Widget/calendar.svg);    
-}
-
-.booking_widget button {
-    width: 70px;
-    height: 70px;
-    border-radius: 50%;
-    background-color: orange;
-    opacity: 1;
-    position: absolute;
-    border: 5px solid #fff;
-    bottom: 0;
-    left: 50%;
-    transform: translate(-50%, 50%);
-    font-size: 30px;
-    cursor: pointer;
-    color: #fff;
-    text-align: center;
+    padding-top: 150px;
 }
 
 /************** WHY_US **************/
