--- a/src/Components/Content/Home/Home.css
+++ b/src/Components/Content/Home/Home.css
@@ -1,7 +1,7 @@
 .home {
     min-height: 150vh;
     background-color: #fafafa;
-    padding-top: 150px;
+    padding-top: 30px;
 }
 
 /************** WHY_US **************/
@@ -97,6 +97,7 @@
     height: 350px;
     /* border: 3px solid green; */
     position: relative;
+    margin-bottom: 30px;
 }
 
 .feedback .feedback_title {
